set(HEADERS
    App.h
    Bellows.h
    Bindings.h
    ButtonGroup.h
    CheckBox.h
    ColorPopup.h
    ColorSwatch.h
    ColorWidget.h
    ConfirmDialog.h
    DialogSystem.h
    DoubleEdit.h
    DoubleEditSlider.h
    DoubleModel.h
    DoubleSlider.h
    Event.h
    FileBrowser.h
    FileEdit.h
    FloatEdit.h
    FloatEditSlider.h
    FloatModel.h
    FloatSlider.h
    GridLayout.h
    GroupBox.h
    IButton.h
    IDialog.h
    IMenuPopup.h
    IPopup.h
    IWidget.h
    IWidgetPopup.h
    IWindow.h
    Icon.h
    IconSystem.h
    IntEdit.h
    IntEditSlider.h
    IntModel.h
    IntSlider.h
    Label.h
    MDICanvas.h
    MDIWidget.h
    MainWindow.h
    Menu.h
    MenuBar.h
    MessageDialog.h
    ProgressDialog.h
    PushButton.h
    RadioButton.h
    RecentFilesModel.h
    RowLayout.h
    ScrollArea.h
    ScrollWidget.h
    Settings.h
    Style.h
    TabBar.h
    TabWidget.h
    ToolButton.h
    WidgetOptions.h
    Window.h)
set(HEADERS_PRIVATE)
set(SOURCE
    App.cpp
    Bellows.cpp
    Bindings.cpp
    ButtonGroup.cpp
    CheckBox.cpp
    ColorPopup.cpp
    ColorSwatch.cpp
    ColorWidget.cpp
    ConfirmDialog.cpp
    DialogSystem.cpp
    DoubleEdit.cpp
    DoubleEditSlider.cpp
    DoubleModel.cpp
    DoubleSlider.cpp
    Event.cpp
    FileBrowser.cpp
    FloatEdit.cpp
    FloatEditSlider.cpp
    FloatModel.cpp
    FloatSlider.cpp
    FileEdit.cpp
    GridLayout.cpp
    GroupBox.cpp
    IButton.cpp
    IDialog.cpp
    IMenuPopup.cpp
    IPopup.cpp
    IWidget.cpp
    IWidgetPopup.cpp
    IWindow.cpp
    Icon.cpp
    IconSystem.cpp
    IntEdit.cpp
    IntEditSlider.cpp
    IntModel.cpp
    IntSlider.cpp
    Label.cpp
    MDICanvas.cpp
    MDIWidget.cpp
    MainWindow.cpp
    Menu.cpp
    MenuBar.cpp
    MessageDialog.cpp
    ProgressDialog.cpp
    PushButton.cpp
    RadioButton.cpp
    RecentFilesModel.cpp
    RowLayout.cpp
    ScrollArea.cpp
    ScrollWidget.cpp
    Settings.cpp
    Style.cpp
    TabBar.cpp
    TabWidget.cpp
    ToolButton.cpp
    WidgetOptions.cpp
    Window.cpp)

add_library(feather-tk-uiPy ${HEADERS} ${HEADERS_PRIVATE} ${SOURCE})
target_link_libraries(feather-tk-uiPy feather-tk-ui Python3::Python)
set_target_properties(feather-tk-uiPy PROPERTIES FOLDER python/lib)
set_target_properties(feather-tk-uiPy PROPERTIES PUBLIC_HEADER "${HEADERS}")

install(TARGETS feather-tk-uiPy
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin
    PUBLIC_HEADER DESTINATION include/feather-tk/uiPy)
